--- a/JS4/JavascriptCSS/exercises/one.css
+++ b/JS4/JavascriptCSS/exercises/one.css
@@ -1,10 +1,9 @@
 .upperContainer {
   width: 102%;
-	right: 10px;
+  right: 10px;
   bottom: 15px;
   text-align: center;
   position: relative;
-  background: darkblue;
 }
 
 .last {
@@ -16,13 +15,23 @@
 .lowerContainer {
   width: 600px;
   margin: 0 auto;
-  border: 1px solid blue;
 }
 
 .captionInput {
-	width: 48%;
+  width: 48%;
+}
+
+.canvas {
+	top: 0;
+	z-index: 2;
+	text-align: center;
+	position: absolute;
 }
 
 input {
   display: inline-block;
+}
+
+body {
+  background: lightblue;
 }
