--- a/JS4/JavascriptCSS/exercises/one.css
+++ b/JS4/JavascriptCSS/exercises/one.css
@@ -1,37 +1,44 @@
-.upperContainer {
-  width: 102%;
-  right: 10px;
-  bottom: 15px;
-  text-align: center;
-  position: relative;
+.videoContainer {
+	width: 100%;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	background: rgba(20, 40, 50, 1);
+	text-align: center;
 }
 
-.last {
-  width: 50%;
-  height: 100%;
-  position: relative;
+.vPlayer {
+	height: 400px;
 }
 
-.lowerContainer {
-  width: 600px;
-  margin: 0 auto;
+.videoCaption {
+	position: absolute;
+	top: 10px;
+	background: rgba(20, 40, 50, 0.3);
+	font-size: 30px;
+	color: rgba(255, 255, 255, 1);
+	padding: 5px;
+	width: 100%;
+}
+
+.inputContainer {
+	width: 600px;
+	margin: 430px auto 20 auto;
 }
 
 .captionInput {
-  width: 48%;
+	width: 300px;
 }
 
-.canvas {
-	top: 0;
-	z-index: 2;
-	text-align: center;
-	position: absolute;
+.caption {
+	display: flex;
+	justify-content: space-between;
 }
 
-input {
-  display: inline-block;
+.caption h5 {
+	width: 100%;
 }
 
-body {
-  background: lightblue;
+.control {
+	width: 100px;
 }
